2000-11-23  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: Don't dup. text when an item is clicked on.

2000-11-23  Willem Jan Palenstijn <palenstijn@wanadoo.nl>

	* paths.h: fixed pathfinding on BeOS.

2000-11-23  Tristan Tarrant <nadir@users.sourceforge.net>

	* browser.cc: show shape name
	* configure.in: added --enable-optimized-debug

2000-11-22  Willem Jan Palenstijn <palenstijn@wanadoo.nl>

	* menulist.cc/h: only redraw changed items (huge speedup), 
	  make mouse disappear on keypress.

2000-11-22  Max Horn  <max@quendi.de>

	* added a lot of C++ std namespace code
	* moved mac port to use CodeWarrior Pro 6 

2000-11-22  Tristan Tarrant <nadir@users.sourceforge.net>

	* data/extras.shp, data/midi_conversion.shp, data/sfx_conversion.shp: 
	  new shapes
	* data/Makefile.am, tools/expack.cc, data/README,
	  Makefile.cygwin, Makefile.win32, Makefile.be: update all
	  known references to shape list for exult.flx...
	* game.cc: use new shapes

2000-11-22  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode.cc:  0x58 in scheduled uc means 'play sound effect'.
	* Fixed animation frame setting in scheduled usecode.

2000-11-20  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* usecode.cc/h, useval.cc/h: added pointer type to Usecode_value

2000-11-20  Tristan Tarrant <nadir@users.sourceforge.net>

	* data/play_1st_scene.shp, data/exit.shp: 2 new shapes
	* data/Makefile.am, tools/expack.cc, data/README,
	  Makefile.cygwin, Makefile.win32, Makefile.be: update all
	  known references to shape list for exult.flx...
	* exult.cc, game.cc: handle extra menu entries
	* README: updated with more information

2000-11-20  Tristan Tarrant <nadir@users.sourceforge.net>

	* configure.in: check if Gnome is installed
	* Makefile.am: add desktop dir
	* desktop/*: Gnome desktop entry and icon

2000-11-17  Max Horn  <max@quendi.de>

	* exult.cc, menulist.cc: Added Cmd-Q which quits exult (MacOS only)