@@ -1,6 +1,8 @@
 2000-11-23  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* gamewin.cc: Don't dup. text when an item is clicked on.
+	* gamewin.cc: NPC's with 'wait' schedule avoid clocked schedule
+	changes, so waiting companions won't walk away.
 
 2000-11-23  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
 
